# example-poetry-docker-project

./: .envrc  Dockerfile  pyproject.toml
